examples/test/testpolicy15588.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15588
  namespace: namespace493
spec:
  podSelector:
    matchLabels:
      key42: value21
      key13: value18
      key18: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value30
          key14: value42
      podSelector:
        matchLabels:
          key9: value7
          key33: value35
